--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <a href="https://github.com/BrownSim/compare-their-vote" target="_blank" class="btn btn-link btn-github">GitHub</a>
-                <a href="https://howtheyvote.eu/" target="_blank" class="btn btn-link">HowTheyVote</a>
+                <a href="https://github.com/BrownSim/compare-their-vote" target="_blank" class="btn btn-link btn-github">{{ 'footer.git'|trans }}</a>
+                <a href="https://howtheyvote.eu/" target="_blank" class="btn btn-link">{{ 'footer.howtheyvote'|trans }}</a>
             </div>
         </div>
     </div>
