--- a/templates/absenteeism/overview.html.twig
+++ b/templates/absenteeism/overview.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center mb-5">Absenteeism rate overview</h1>
+                <h1 class="text-center mb-5">{{ 'page.absenteeism_overview.title'|trans }}</h1>
             </div>
             <div class="col-12 d-flex">
                 <div id="absenteeism-map" class="absenteeism-map mx-auto" data-json="{{ map }}"></div>
@@ -13,7 +13,7 @@
                 <div class="card shadow mt-5">
                     <div class="card-header py-4">
                         <h4 class="text-center mb-0">
-                            {{ 'absenteeism.chart.title.abstention_political_group'|trans }}
+                            {{ 'page.absenteeism_overview.abstention_political_group'|trans }}
                         </h4>
                     </div>
                     <div class="card-body">
