--- a/templates/common/vote/_detail.html.twig
+++ b/templates/common/vote/_detail.html.twig
@@ -1,5 +1,5 @@
 <p class="datatable-vote-results-detail mb-0">
-    <span>{{ 'vote.title'|trans }}</span><span>{{ resource.title }}</span>
-    <span>{{ 'vote.ref'|trans }}</span><span>{{ resource.reference }}</span>
-    <span>{{ 'vote.date'|trans }} </span><small>{{ resource.voteDate|date('Y-m-d') }}</small>
+    <span>{{ 'global.vote.title'|trans }}</span><span>{{ resource.title }}</span>
+    <span>{{ 'global.vote.ref'|trans }}</span><span>{{ resource.reference }}</span>
+    <span>{{ 'global.vote.date'|trans }} </span><small>{{ resource.voteDate|date('Y-m-d') }}</small>
 </p>
