--- a/templates/matrix/fullscreen.html.twig
+++ b/templates/matrix/fullscreen.html.twig
@@ -43,7 +43,7 @@
                                                 <p class="mb-0 text-center">
                                                     {{ el.rate|default(null)|round }}%
                                                     <br>
-                                                    <small class="nb-vote">{{ 'vote_label'|trans({'nb': el.nb_vote}) }}</small>
+                                                    <small class="nb-vote">{{ 'global.vote_label'|trans({'nb': el.nb_vote}) }}</small>
                                                 </p>
                                             {% endif %}
                                         </span>
