--- a/templates/memberToMember/index.html.twig
+++ b/templates/memberToMember/index.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
     <div class="container">
         <div class="col-12 text-center">
-            <h2 class="h5 mb-5">{{ 'hp_last_vote'|trans({'start': lastSession.startAt|date('M d'), 'to': lastSession.endAt|date('M d')}) }}</h2>
+            <h2 class="h5 mb-5">{{ 'global.last_vote_date'|trans({'start': lastSession.startAt|date('M d'), 'to': lastSession.endAt|date('M d')}) }}</h2>
         </div>
     </div>
 
@@ -17,7 +17,7 @@
                     {{ form_row(form.member, {'attr': {'data-custom-provider': 'data-members-detail'}}) }}
                     {{ form_row(form.members, {'attr': {'data-custom-provider': 'data-members-detail'}}) }}
                     {{ form_row(form.voteValue) }}
-                    <button type="submit" class="btn btn-primary">{{ 'search'|trans }}</button>
+                    <button type="submit" class="btn btn-primary">{{ 'global.search'|trans }}</button>
                 {{ form_end(form) }}
             {% endif %}
         </div>
@@ -28,9 +28,9 @@
                     <div class="col-xl mt-5">
                         <div class="text-center">
                             <h4>{{ comparison.member.firstName }} {{ comparison.member.lastName }} <br> {{ comparison.memberCompared.firstName }} {{ comparison.memberCompared.lastName }}</h4>
-                            {{ 'similar_vote_rate'|trans({'rate': comparison.data.rate.same|round(2), 'nb': comparison.data.total}) }}
+                            {{ 'page.member_comparison.similar_vote_rate'|trans({'rate': comparison.data.rate.same|round(2), 'nb': comparison.data.total}) }}
                         </div>
-                        <div class="my-5 mx-auto member-comparison-chart" data-chart-type="doughnut" data-value="{{ comparison.data|chart_pie_this }}" data-title="{{ 'vote_label'|trans({'nb': comparison.data.total}) }}"></div>
+                        <div class="my-5 mx-auto member-comparison-chart" data-chart-type="doughnut" data-value="{{ comparison.data|chart_pie_this }}" data-title="{{ 'global.vote_label'|trans({'nb': comparison.data.total}) }}"></div>
                     </div>
                 {% endfor %}
             </div>
@@ -41,7 +41,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{{ key }}-different-vote-detail" aria-expanded="false" aria-controls="{{ key }}-vote-detail">
-                                        {{ 'list_vote_member_vs_member'|trans({
+                                        {{ 'page.member_comparison.member_compared_to_member'|trans({
                                             'member_1': comparison.member.firstName ~ ' ' ~ comparison.member.lastName,
                                             'member_2': comparison.memberCompared.firstName ~ ' ' ~ comparison.memberCompared.lastName
                                         }) }}
