Update route name

--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -17,8 +17,8 @@
                                 {{ 'header.menu.statistic.title'|trans }}
                             </button>
                             <ul class="dropdown-menu fade-up">
-                                <li><a class="dropdown-item" href="{{ path('member-to-member') }}">{{ 'header.menu.statistic.comparator'|trans }}</a></li>
-                                <li><a class="dropdown-item" href="{{ path('member-map') }}">{{ 'header.menu.statistic.matrix'|trans }}</a></li>
+                                <li><a class="dropdown-item" href="{{ path('compare-member') }}">{{ 'header.menu.statistic.comparator'|trans }}</a></li>
+                                <li><a class="dropdown-item" href="{{ path('member-heatmap') }}">{{ 'header.menu.statistic.matrix'|trans }}</a></li>
                                 <li><a class="dropdown-item" href="{{ path('absenteeism_overview') }}">{{ 'header.menu.statistic.absenteeism'|trans }}</a></li>
                                 <li><a class="dropdown-item" href="{{ path('absenteeism_country') }}">{{ 'header.menu.statistic.absenteeism_detail'|trans }}</a></li>
                             </ul>
