--- a/templates/hp.html.twig
+++ b/templates/hp.html.twig
@@ -26,7 +26,7 @@
                             </span>
                         </p>
                     </div>
-                    <a href="{{ path('member-to-member') }}" class="btn btn-primary mt-4">{{ 'page.hp.vote_comparator.btn'|trans }}</a>
+                    <a href="{{ path('compare-member') }}" class="btn btn-primary mt-4">{{ 'page.hp.vote_comparator.btn'|trans }}</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                             </p>
                         </div>
                     </div>
-                    <a href="{{ path('member-map') }}" class="btn btn-primary mt-4">{{ 'page.hp.matrix.btn'|trans }}</a>
+                    <a href="{{ path('member-heatmap') }}" class="btn btn-primary mt-4">{{ 'page.hp.matrix.btn'|trans }}</a>
                 </div>
             </div>
         </div>
